Updated assets dir

--- a/src/index.html
+++ b/src/index.html
@@ -23,12 +23,12 @@
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.png">
-  <link rel="icon" href="assets/icons/favicon.png">
+  <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
+  <link rel="icon" href="icons/favicon.png">
 
-  <link rel="preload" as="image" href="assets/img/icon-add-post.svg">
-  <link rel="preload" as="image" href="assets/img/icon-qr-code.svg">
-  <link rel="preload" as="image" href="assets/img/icon-vehicle-add.svg">
+  <link rel="preload" as="image" href="img/icon-add-post.svg">
+  <link rel="preload" as="image" href="img/icon-qr-code.svg">
+  <link rel="preload" as="image" href="img/icon-vehicle-add.svg">
 
   <script defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqDMSFVfl-tOgqaj4ZqA5I3HnobrIK6jg&loading=async&libraries=places&v=weekly">
