Added back handler for android

--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,8 @@
   <script src="./js/event-view.js" type="module"></script>
   <script src="./js/venue-view.js" type="module"></script>
   <script src="./js/edit-post.js" type="module"></script>
+
+  <script src="./js/native.js" type="module"></script>
 </body>
 
 </html>
