--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
   <script defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqDMSFVfl-tOgqaj4ZqA5I3HnobrIK6jg&loading=async&libraries=places&v=weekly">
     </script>
-
+  <script src="https://hammerjs.github.io/dist/hammer.js"></script>
   <script src="//cdn.jsdelivr.net/npm/hls.js@latest"></script>
 </head>
 
@@ -44,7 +44,6 @@
   <script src="./js/view-user-profile.js" type="module"></script>
   <script src="./js/profile-edit.js" type="module"></script>
 
-  <script src="./js/notifications.js" type="module"></script>
   <script src="./js/discoverpage.js" type="module"></script>
   <script src="./js/search.js" type="module"></script>
 
