--- a/src/index.html
+++ b/src/index.html
@@ -31,11 +31,15 @@
     </script>
   <script src="https://hammerjs.github.io/dist/hammer.js"></script>
   <script src="//cdn.jsdelivr.net/npm/hls.js@latest"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.0/lottie.min.js"></script>
 </head>
 
 <body>
   <div id="app"></div>
 
+
+  <!-- Lightbox Script -->
+  <script type="module" src="./js/fslightbox.js"></script>
   <script type="module" src="./js/app.js"></script>
 
   <script src="./js/authentication.js" type="module"></script>
